fix(cursor): line collapse bug in Firefox

--- a/src/assets/mute-codemirror.scss
+++ b/src/assets/mute-codemirror.scss
@@ -8,19 +8,28 @@
   font-family: $font, serif;
   color: var(--theme-fg-text);
   background-color: var(--theme-bg-color); // $bg-card;
-  line-height: 2.4rem;
+  line-height: 24px;
+
+  .collaborator-cursor-bookmark {
+    // This prevent line collapse bug in Firefox
+    &::before {
+      content: "";
+    }
+  }
 
   .collaborator-cursor {
-    z-index: 1000;
+    border-left: 2px solid;
+    position: absolute;
+  }
+
+  .collaborator-cursor-transition {
     position: absolute;
     border-left: 2px solid;
-    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
   }
 
   .collaborator-display-name {
     z-index: 10000;
     display: inline-block;
-    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     position: absolute;
     padding: 1px 0;
     overflow: hidden;
